Fixed bottom of widgets being cut off by footer.

--- a/console/css/style.css
+++ b/console/css/style.css
@@ -65,6 +65,7 @@ aside
     vertical-align: top;
     display: inline-block;
     width: 39%;
+    padding-bottom: 3em;
 }
 
 #LivePanelControls
